Squashed after rollback: 3ea29612-4cd9-4526-8827-aad339e02927

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,4 @@
-MONGO_URL="mongodb://localhost:27017"
-DB_NAME="test_database"
+DATABASE_URL="sqlite:///./ketto_care.db"
 OPENAI_API_KEY="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"
 JWT_SECRET_KEY="ketto-care-super-secret-key-2025"
 SMTP_SERVER=""
