--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "lucide-react": "^0.469.0",
+    "date-fns": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
